@@ -14,6 +14,7 @@ import javafx.scene.Scene;
 import javafx.scene.control.*;
 import javafx.stage.FileChooser;
 import javafx.stage.Stage;
+
 import java.io.File;
 import java.io.FileWriter;
 import java.io.IOException;
@@ -53,21 +54,17 @@ public class blueprintController implements Initializable {
     private ArrayList<String> batchData = new ArrayList<>();
     private int idCount = 0;
 
-
-    private final String[] searchspaces = {"Bit strings", "Permutations"};
-    private final String[] problems = {"OneMax", "LeadingOnes"};
-    private final String[] algorithms = {"(1+1) EA", "RLS", "1+1 EA Permutations", "Simulated Annealing", "Ant Colony Optimization"};
     private final String[] TSPproblems = {"berlin52", "bier127", "a280"};
-    private final String[] ACOupdateRules = {"MMAS", "Elitist"};
+    private final String[] ACOupdateRules = {"AS-update", "Iteration Best (IB)", "best-so-far(BS)"};
 
     private String[] optionalValues;
 
 
     private Stage stage;
-    public HashMap<String,String> blueprintChoices = new HashMap<>();
+    public HashMap<String, String> blueprintChoices = new HashMap<>();
 
 
-    public void initialize(URL arg0, ResourceBundle arg1){
+    public void initialize(URL arg0, ResourceBundle arg1) {
         //initialize components
         TSPSelector.setVisible(false);
         tspProblemLbl.setVisible(false);
@@ -89,8 +86,9 @@ public class blueprintController implements Initializable {
         updateRuleSelector.getItems().addAll(ACOupdateRules);
         sortComboBoxItems(allComboBoxes);
 
-        TSPSelector.setValue(TSPSelector.getItems().get(0));
-        updateRuleSelector.setValue(updateRuleSelector.getItems().get(0));
+        txtFieldListener(allTextFields);
+        TSPSelector.setValue(TSPSelector.getItems().getFirst());
+        updateRuleSelector.setValue(updateRuleSelector.getItems().getFirst());
 
         hideSpecialFields();
 
@@ -109,18 +107,29 @@ public class blueprintController implements Initializable {
 
     }
 
+    private void txtFieldListener(List<TextField> allTextFields) {
+        for (TextField textField : allTextFields) {
+            applyIntegerTextFormatter(textField);
+        }
+    }
+
     private void updateCategories() {
-        for (ComboBox<String> comboBox : allComboBoxes){
+        for (ComboBox<String> comboBox : allComboBoxes) {
+            String orgVal = comboBox.getValue();
             String category = getComboBoxCategory(comboBox);
 
             comboBox.getItems().removeAll(dependencies);
 
-            for (String item : categoryOptions.get(category)){
+            for (String item : categoryOptions.get(category)) {
                 if (!dependencies.contains(item) && !comboBox.getItems().contains(item)) {
                     comboBox.getItems().add(item);
                 }
             }
+            if (dependencies.contains(orgVal)) {
+                comboBox.setValue(null);
+            }
         }
+
         sortComboBoxItems(allComboBoxes);
     }
 
@@ -136,22 +145,24 @@ public class blueprintController implements Initializable {
     private void addCategoryOptions() {
         categoryOptions.put("searchSpace", Arrays.asList("Bit strings", "Permutations"));
         categoryOptions.put("problem", Arrays.asList("OneMax", "LeadingOnes", "TSP"));
-        categoryOptions.put("algorithm", Arrays.asList("(1+1) EA","(u+y) EA", "RLS", "(1+1) EA TSP", "Simulated Annealing", "Ant Colony Optimization", "Simulated Annealing TSP"));
+        categoryOptions.put("algorithm", Arrays.asList("(1+1) EA", "(u+y) EA", "RLS", "(1+1) EA TSP", "Simulated Annealing", "ACO", "ACO MMAS", "ACO Elitist", "Simulated Annealing TSP"));
         categoryOptions.put("tsp problems", Arrays.asList("berlin52", "bier127", "a280"));
-        categoryOptions.put("updateRule", Arrays.asList("MMAS", "Elitist"));
+        categoryOptions.put("updateRule", Arrays.asList("AS-update", "Iteration Best (IB)", "best-so-far(BS)"));
     }
 
     private void initializeBatchParameters() {
-        batchParameters.put("Ant Colony Optimization", List.of("Colony size", "Alpha", "Beta", "Update rule", "Local search"));
-        batchParameters.put("(u+y) EA", List.of("u","y"));
+        batchParameters.put("ACO", List.of("Colony size", "Alpha", "Beta", "Update rule", "Local search"));
+        batchParameters.put("ACO MMAS", List.of("Colony size", "Alpha", "Beta", "Update rule", "Local search"));
+        batchParameters.put("ACO Elitist", List.of("Colony size", "Alpha", "Beta", "Update rule", "Local search"));
+        batchParameters.put("(u+y) EA", List.of("u", "y"));
         batchParameters.put("Fitness bound", List.of("F. Iterations"));
         batchParameters.put("Iteration bound", List.of("I. Iterations"));
         batchParameters.put("Optimum reached", List.of("Optimal"));
-        batchParameters.put("TSP",List.of("TSP problem"));
-        batchParameters.put("Bit strings",List.of("Dimension"));
+        batchParameters.put("TSP", List.of("TSP problem"));
+        batchParameters.put("Bit strings", List.of("Dimension"));
     }
 
-    private void addDescriptions(){
+    private void addDescriptions() {
         descriptions.put("Bit strings", "The search space consisting of bit strings i.e. the set {0,1}^n, where n is the dimension.");
         descriptions.put("Permutations", "Represents all permutations in the symmetric group S_{dimension}. That are all permutations of the elements {1,...,dimension}.");
 
@@ -164,7 +175,9 @@ public class blueprintController implements Initializable {
         descriptions.put("(1+1) EA TSP", "The (1+1) EA is a simple evolutionary strategy that involves maintaining a single individual in the population, generating a mutated offspring, and replacing the current individual with the offspring only if it has higher fitness.");
         descriptions.put("RLS", "A simple optimization algorithm that iteratively improves a solution by making small random changes and selecting better solutions.");
         descriptions.put("Simulated Annealing", "An optimization algorithm inspired by the annealing process in metallurgy. It iteratively explores the solution space by making random changes to the current solution.");
-        descriptions.put("Ant Colony Optimization", "A nature-inspired optimization algorithm based on the foraging behavior of ants. It uses a population of artificial ants to find optimal solutions by simulating the way real ants deposit pheromones to communicate paths to resources.");
+        descriptions.put("ACO", "A nature-inspired optimization algorithm based on the foraging behavior of ants. It uses a population of artificial ants to find optimal solutions by simulating the way real ants deposit pheromones to communicate paths to resources.");
+        descriptions.put("ACO MMAS", "A nature-inspired optimization algorithm based on the foraging behavior of ants. It uses a population of artificial ants to find optimal solutions by simulating the way real ants deposit pheromones to communicate paths to resources.");
+        descriptions.put("ACO Elitist", "A nature-inspired optimization algorithm based on the foraging behavior of ants. It uses a population of artificial ants to find optimal solutions by simulating the way real ants deposit pheromones to communicate paths to resources.");
 
         descriptions.put("Optimum reached", "Stops a run if the specified fitness bound is reached.");
         descriptions.put("Fitness bound", "Stops a run if a certain fitness is reached.");
@@ -196,46 +209,45 @@ public class blueprintController implements Initializable {
             writer.write("Algorithm, ");
             writer.write(algorithmSelector.getValue() + "\n");
 
-            if (searchspaceSelector.getValue().equals("Bit strings") && batchData.isEmpty()){
+            if (searchspaceSelector.getValue().equals("Bit strings") && batchData.isEmpty()) {
                 writer.write("Dimension, ");
                 writer.write(dimensionTxtField.getText() + "\n");
             }
 
-            if (batchData.isEmpty()){
+            if (batchData.isEmpty()) {
                 writer.write("Stopping criterias, ");
-                for (int i = 0; i < allCheckboxes.size(); i++){
+                for (int i = 0; i < allCheckboxes.size(); i++) {
                     CheckBox cb = allCheckboxes.get(i);
-                    if (cb.isSelected()){
-                        if (cb.getText().equals("Optimum reached")){
+                    if (cb.isSelected()) {
+                        if (cb.getText().equals("Optimum reached")) {
                             writer.write(cb.getText() + ", ");
                         } else {
                             writer.write(cb.getText() + ", ");
-                            writer.write(allTextFields.get(i-1).getText() + ", ");
+                            writer.write(allTextFields.get(i - 1).getText() + ", ");
                         }
 
                     }
                 }
-                writer.write( "\n");
-                if (specialTxtField1.isVisible()){
+                writer.write("\n");
+                if (specialTxtField1.isVisible()) {
                     writer.write("Special parameters, ");
                     for (TextField txtField : allSpecialTxtFields) {
                         if (txtField.isVisible()) {
                             writer.write(txtField.getText() + ", ");
                         }
                     }
-                    writer.write( "\n");
+                    writer.write("\n");
                 }
-                if (problemSelector.getValue().equals("TSP")){
+                if (problemSelector.getValue().equals("TSP")) {
                     writer.write("TSP problem, ");
                     writer.write(TSPSelector.getValue() + "\n");
                 }
-                if (algorithmSelector.getValue().equals("Ant Colony Optimization")){
+                if (algorithmSelector.getValue().equals("ACO MMAS") || algorithmSelector.getValue().equals("ACO Elitist") || algorithmSelector.getValue().equals("ACO")) {
                     writer.write("ACO update rule, ");
                     writer.write(updateRuleSelector.getValue() + "\n");
                     writer.write("local search, " + localSearchCheckbox.isSelected() + "\n");
                 }
-            }
-            else {
+            } else {
                 // Write batch table data to the file
                 writer.write("batch\n");
                 for (String schedule : batchData) {
@@ -267,11 +279,11 @@ public class blueprintController implements Initializable {
         return comboBox.getValue() != null ? comboBox.getValue().toString() : "";
     }
 
-    private String getCheckBoxValue(CheckBox checkBox){
+    private String getCheckBoxValue(CheckBox checkBox) {
         return checkBox.isSelected() ? checkBox.getText() : "";
     }
 
-    private void hideSpecialFields(){
+    private void hideSpecialFields() {
         specialLbl1.setVisible(false);
         specialLbl2.setVisible(false);
         specialLbl3.setVisible(false);
@@ -288,9 +300,10 @@ public class blueprintController implements Initializable {
         optimalSetting.setVisible(false);
     }
 
-    private void checkSpecialParameters(String selectedAlgo){
+    private void checkSpecialParameters(String selectedAlgo) {
         hideSpecialFields();
-        if (selectedAlgo.equals("Ant Colony Optimization")){
+        System.out.println(selectedAlgo);
+        if (selectedAlgo.equals("ACO MMAS") || selectedAlgo.equals("ACO Elitist") || selectedAlgo.equals("ACO")) {
             specialLbl1.setText("Colony size");
             specialLbl2.setText("Alpha");
             specialLbl3.setText("Beta");
@@ -314,7 +327,7 @@ public class blueprintController implements Initializable {
             updateRuleLbl.setVisible(false);
             localSearchCheckbox.setVisible(false);
         }
-        if (selectedAlgo.equals("(u+y) EA")){
+        if (selectedAlgo.equals("(u+y) EA")) {
             specialLbl1.setText(("u"));
             specialLbl2.setText("y");
             specialLbl1.setVisible(true);
@@ -328,14 +341,8 @@ public class blueprintController implements Initializable {
 
     }
 
-    private void clearTxtFields(){
-        for (TextField txtField : allTextFields){
-            txtField.clear();
-        }
-    }
-
     @FXML
-    void checkboxHandler(ActionEvent event){
+    void checkboxHandler(ActionEvent event) {
         CheckBox checkbox = (CheckBox) event.getSource();
 
         if (descriptions.containsKey(checkbox.getText())) {
@@ -344,11 +351,20 @@ public class blueprintController implements Initializable {
 
         // Check which checkbox is clicked
         if (checkbox.getText().equals("Fitness bound")) {
-            fitnessTxtField.setDisable(!checkbox.isSelected());
+            if (!checkbox.isSelected()) {
+                fitnessTxtField.setDisable(true);
+                fitnessTxtField.clear();
+            } else {
+                fitnessTxtField.setDisable(false);
+            }
+
         } else if (checkbox.getText().equals("Iteration bound")) {
-            iterationTxtField.setDisable(!checkbox.isSelected());
-        } else if (checkbox.getText().equals("Time elapsed")) {
-            timeBoundTxtField.setDisable(!checkbox.isSelected());
+            if (!checkbox.isSelected()) {
+                iterationTxtField.setDisable(true);
+                iterationTxtField.clear();
+            } else {
+                iterationTxtField.setDisable(false);
+            }
         }
 
         boolean anyCheckboxChecked = fitnessBound.isSelected() || iterationBound.isSelected() || timeboundCheckbox.isSelected();
@@ -357,27 +373,17 @@ public class blueprintController implements Initializable {
     }
 
     @FXML
-    void optimalSettingsHandler(ActionEvent event){
-        if (optimalSetting.isSelected()){
-            if (Objects.equals(algorithmSelector.getValue(), "Ant Colony Optimization")) {
-                if (updateRuleSelector.getValue().equals("MMAS")) {
-                    specialTxtField1.setText("100");
-                    specialTxtField2.setText("1");
-                    specialTxtField3.setText("2");
-                }
-                else if (updateRuleSelector.getValue().equals("Elitist")){
-                    specialTxtField1.setText("100");
-                    specialTxtField2.setText("5");
-                    specialTxtField3.setText("10");
-                }
-
+    void optimalSettingsHandler(ActionEvent event) {
+        if (optimalSetting.isSelected()) {
+            if (Objects.equals(algorithmSelector.getValue(), "ACO Elitist") || Objects.equals(algorithmSelector.getValue(), "ACO") || Objects.equals(algorithmSelector.getValue(), "ACO MMAS")) {
+                specialTxtField1.setText("100");
+                specialTxtField2.setText("1");
+                specialTxtField3.setText("2");
+            } else if (Objects.equals(algorithmSelector.getValue(), "(u+y) EA")) {
+                specialTxtField1.setText("5");
+                specialTxtField2.setText("3");
             }
-            else if (Objects.equals(algorithmSelector.getValue(), "(u+y) EA")){
-                specialTxtField1.setText("15");
-                specialTxtField2.setText("10");
-            }
-        }
-        else {
+        } else {
             specialTxtField1.clear();
             specialTxtField2.clear();
             specialTxtField3.clear();
@@ -388,13 +394,13 @@ public class blueprintController implements Initializable {
     }
 
     @FXML
-    void selectionHandler(ActionEvent event){
+    void selectionHandler(ActionEvent event) {
         ComboBox<?> selector = (ComboBox<?>) event.getSource();
         try {
             String selectorValue = selector.getSelectionModel().getSelectedItem().toString();
 
             //update depending on combobox selection
-            if (selector == algorithmSelector){
+            if (selector == algorithmSelector) {
                 checkSpecialParameters(selectorValue);
             }
 
@@ -410,36 +416,28 @@ public class blueprintController implements Initializable {
                 dimensionTxtField.setDisable(false);
 
                 if (selector.getValue().equals("Bit strings")) {
-                    dependencies.addAll(Arrays.asList("TSP", "(1+1) EA TSP", "Simulated Annealing TSP"));
+                    dependencies.addAll(Arrays.asList("TSP", "(1+1) EA TSP", "Simulated Annealing TSP", "ACO", "ACO MMAS", "ACO Elitist"));
                     dependencies.removeAll(Arrays.asList("OneMax", "LeadingOnes", "(1+1) EA", "RLS", "Simulated Annealing"));
                 } else if (selector.getValue().equals("Permutations")) {
-                    dependencies.removeAll(Arrays.asList("TSP", "(1+1) EA TSP", "Simulated Annealing TSP"));
+                    dependencies.removeAll(Arrays.asList("TSP", "(1+1) EA TSP", "Simulated Annealing TSP", "ACO", "ACO MMAS", "ACO Elitist"));
                     dependencies.addAll(Arrays.asList("OneMax", "LeadingOnes", "(1+1) EA", "RLS", "Simulated Annealing"));
                     dimensionLabel.setDisable(true);
                     dimensionTxtField.setDisable(true);
                 }
-                String val = algorithmSelector.getValue();
                 updateCategories();
-                algorithmSelector.setValue(val);
             }
 
-            if (problemSelector.getValue().equals("TSP")){
+            if (problemSelector.getValue().equals("TSP")) {
                 TSPSelector.setVisible(true);
                 tspProblemLbl.setVisible(true);
-                //timeboundCheckbox.setVisible(true);
-                //timeBoundTxtField.setVisible(true);
             } else {
                 TSPSelector.setVisible(false);
                 tspProblemLbl.setVisible(false);
-                //timeboundCheckbox.setVisible(false);
-                //timeBoundTxtField.setVisible(false);
             }
 
         } catch (NullPointerException ignored) {
             TSPSelector.setVisible(false);
             tspProblemLbl.setVisible(false);
-            //timeboundCheckbox.setVisible(false);
-            //timeBoundTxtField.setVisible(false);
         }
 
     }
@@ -448,8 +446,7 @@ public class blueprintController implements Initializable {
     void createNewBatch(ActionEvent event) {
         if (checkParametersFilled()) {
             showAlert("Please fill out missing information");
-        }
-        else {
+        } else {
             // Increment the id counter
             idCount = idCount + 1;
 
@@ -486,11 +483,15 @@ public class blueprintController implements Initializable {
     }
 
 
-    public void addSchedule(){
+    public void addSchedule() {
         Schedule newSchedule = new Schedule();
 
         try {
             int dimension = Integer.parseInt(dimensionTxtField.getText());
+            if (dimension > 10000) {
+                showAlert("Dimension must be less than 10000");
+                return;
+            }
             newSchedule.setDimension(dimension);
             newSchedule.setSearchSpaceString(searchspaceSelector.getValue());
         } catch (Exception e) {
@@ -499,22 +500,13 @@ public class blueprintController implements Initializable {
 
         }
 
-        if (algorithmSelector.getValue().equals("(u+y) EA")){
-            if (problemSelector.getValue().equals("TSP")){
+        if (algorithmSelector.getValue().equals("(u+y) EA")) {
+            if (problemSelector.getValue().equals("TSP")) {
                 newSchedule.setAlgorithmString("(u+y) EA TSP");
-            }
-            else {
+            } else {
                 newSchedule.setAlgorithmString("(u+y) EA");
             }
-        }
-        else if (algorithmSelector.getValue().equals("Ant Colony Optimization")) {
-            if (updateRuleSelector.getValue().equals("MMAS")) {
-                newSchedule.setAlgorithmString("Ant Colony Optimization MMAS");
-            } else {
-                newSchedule.setAlgorithmString("Ant Colony Optimization Elitist");
-            }
-        }
-        else {
+        } else {
             newSchedule.setAlgorithmString(algorithmSelector.getValue());
         }
 
@@ -532,7 +524,7 @@ public class blueprintController implements Initializable {
                 return;
             }
         }
-        if (TSPSelector.isVisible()){
+        if (TSPSelector.isVisible()) {
             newSchedule.setTSPProblem(TSPSelector.getValue());
         }
 
@@ -542,21 +534,27 @@ public class blueprintController implements Initializable {
                 newSchedule.setIterationBound(iterationBound);
             } catch (Exception e) {
                 showAlert("Enter only integers for iteration bound");
-                return ;
+                return;
             }
 
         }
-        if (algorithmSelector.getValue().equals("Ant Colony Optimization")){
-            String colonySize = specialTxtField1.getText();
-            String alpha = specialTxtField2.getText();
-            String beta = specialTxtField3.getText();
-            String updateRule = updateRuleSelector.getValue();
-            boolean localSearch = localSearchCheckbox.isSelected();
-            optionalValues = new String[]{colonySize, alpha, beta};
+        if (algorithmSelector.getValue().equals("ACO MMAS") || algorithmSelector.getValue().equals("ACO Elitist") || algorithmSelector.getValue().equals("ACO")) {
+            try {
+                String colonySize = specialTxtField1.getText();
+                String alpha = specialTxtField2.getText();
+                String beta = specialTxtField3.getText();
+                String updateRule = updateRuleSelector.getValue();
+                boolean localSearch = localSearchCheckbox.isSelected();
+                optionalValues = new String[]{colonySize, alpha, beta};
 
-            newSchedule.setUpdateRule(updateRule);
-            newSchedule.setLocalSearch(localSearch);
-            newSchedule.setOptional(optionalValues);
+                newSchedule.setUpdateRule(updateRule);
+                newSchedule.setLocalSearch(localSearch);
+                newSchedule.setOptional(optionalValues);
+            } catch (Exception e) {
+                showAlert("Enter only integers for iteration bound");
+                return;
+            }
+
 
         }
         if (algorithmSelector.getValue().equals("(u+y) EA")) {
@@ -574,7 +572,7 @@ public class blueprintController implements Initializable {
         newSchedule.setUpAlgorithm();
     }
 
-    private boolean checkParametersFilled(){
+    private boolean checkParametersFilled() {
         return (!iterationTxtField.isDisabled() && iterationTxtField.getText().isEmpty()) ||
                 (!dimensionTxtField.isDisabled() && dimensionTxtField.getText().isEmpty()) ||
                 (!fitnessTxtField.isDisabled() && fitnessTxtField.getText().isEmpty()) ||
@@ -587,50 +585,47 @@ public class blueprintController implements Initializable {
                 (updateRuleSelector.getValue() == null) ||
                 (searchspaceSelector.getValue() == null) ||
                 (problemSelector.getValue() == null) ||
-                (algorithmSelector.getValue() == null) ;
+                (algorithmSelector.getValue() == null);
+    }
+
+    private void applyIntegerTextFormatter(TextField textField) {
+        textField.textProperty().addListener((observable, oldValue, newValue) -> {
+            if (!newValue.matches("\\d*")) {
+                showAlert("Please enter only integers.");
+                textField.setText(oldValue);
+            }
+        });
     }
 
 
-    private String batchTableInitialValue(String category, String id){
+    private String batchTableInitialValue(String category, String id) {
         String res = "";
 
-        if (category.equals("id")){
+        if (category.equals("id")) {
             res = id;
-        }
-        else if (category.equals("Dimension") && !dimensionTxtField.isDisable()){
+        } else if (category.equals("Dimension") && !dimensionTxtField.isDisable()) {
             res = dimensionTxtField.getText();
-        }
-        else if(category.equals("F. Iterations") && !fitnessTxtField.isDisable()){
+        } else if (category.equals("F. Iterations") && !fitnessTxtField.isDisable()) {
             res = fitnessTxtField.getText();
-        }
-        else if(category.equals("I. Iterations") && !iterationTxtField.isDisable()){
+        } else if (category.equals("I. Iterations") && !iterationTxtField.isDisable()) {
             res = iterationTxtField.getText();
-        }
-        else if(category.equals("Colony size")){
+        } else if (category.equals("Colony size")) {
             res = specialTxtField1.getText();
-        }
-        else if(category.equals("Alpha")){
+        } else if (category.equals("Alpha")) {
             res = specialTxtField2.getText();
-        }
-        else if(category.equals("Beta")){
+        } else if (category.equals("Beta")) {
             res = specialTxtField3.getText();
-        }
-        else if(category.equals("u")){
+        } else if (category.equals("u")) {
             res = specialTxtField1.getText();
-        }
-        else if(category.equals("y")){
+        } else if (category.equals("y")) {
             res = specialTxtField2.getText();
-        }
-        else if(category.equals("TSP problem")){
+        } else if (category.equals("TSP problem")) {
             res = TSPSelector.getValue();
-        }
-        else if(category.equals("Update rule")){
+        } else if (category.equals("Update rule")) {
             res = updateRuleSelector.getValue();
-        }
-        else if(category.equals("Local search")){
+        } else if (category.equals("Local search")) {
             res = String.valueOf(localSearchCheckbox.isSelected());
-        }
-        else if(category.equals("Optimal")){
+        } else if (category.equals("Optimal")) {
             res = "true";
         }
 
@@ -639,13 +634,13 @@ public class blueprintController implements Initializable {
 
 
     @FXML
-    void removeBatch(ActionEvent event){
+    void removeBatch(ActionEvent event) {
         String selectedItem = batchList.getSelectionModel().getSelectedItem();
         if (selectedItem != null) {
             batchList.getItems().remove(selectedItem);
             batchData.removeIf(s -> s.equals(selectedItem));
         }
-        if (batchData.isEmpty()){
+        if (batchData.isEmpty()) {
             searchspaceSelector.setDisable(false);
             problemSelector.setDisable(false);
             algorithmSelector.setDisable(false);
@@ -654,10 +649,9 @@ public class blueprintController implements Initializable {
 
     @FXML
     void saveHandler(ActionEvent event) {
-        if (checkParametersFilled()){
+        if (checkParametersFilled()) {
             showAlert("Please fill out missing information");
-        }
-        else{
+        } else {
             File file = fileChooser.showSaveDialog(stage);
             if (file != null) {
                 saveDataToFile(file);
@@ -670,58 +664,41 @@ public class blueprintController implements Initializable {
     void returnHome(ActionEvent event) throws IOException {
         Parent root = FXMLLoader.load(Objects.requireNonNull(main.class.getResource("fxml/homePage.fxml")));
         Scene scene = new Scene(root);
-        stage = (Stage)((Node)event.getSource()).getScene().getWindow();
+        stage = (Stage) ((Node) event.getSource()).getScene().getWindow();
 
         Platform.runLater(root::requestFocus);
         //scene.getStylesheets().add("chart-styles.css");
         stage.setScene(scene);
-        stage.show();}
+        stage.show();
+    }
 
     @FXML
     void startMainPage(ActionEvent event) throws IOException {
         // Load the home page FXML file
         //make an array where you fill it with the chosen combobox values
         //make a hashmap of string
-        if(batchData.size() == 0){
-             addSchedule();
+        if (batchData.isEmpty()) {
+            addSchedule();
         }
 
-            FXMLLoader loader = new FXMLLoader(Objects.requireNonNull(main.class.getResource("fxml/homePage.fxml")));
-            Parent root = loader.load();
+        FXMLLoader loader = new FXMLLoader(Objects.requireNonNull(main.class.getResource("fxml/homePage.fxml")));
+        Parent root = loader.load();
 
-            // Here you would get the controller if you need to call methods on it
-            mainController controller = loader.getController();
-            controller.recieveArray(Schedule.getSchedules()); // Call methods on the controller if needed
+        // Here you would get the controller if you need to call methods on it
+        mainController controller = loader.getController();
+        controller.recieveArray(Schedule.getSchedules()); // Call methods on the controller if needed
 
-            // Set the scene to the home page
-            Scene scene = new Scene(root);
-            Stage stage = (Stage) ((Node) event.getSource()).getScene().getWindow();
+        // Set the scene to the home page
+        Scene scene = new Scene(root);
+        Stage stage = (Stage) ((Node) event.getSource()).getScene().getWindow();
 
-            // Optional: If you need the home page to gain focus or perform additional setup
-            Platform.runLater(() -> {
-                root.requestFocus();
-                // Any additional setup can go here
-            });
+        // Optional: If you need the home page to gain focus or perform additional setup
+        Platform.runLater(() -> {
+            root.requestFocus();
+            // Any additional setup can go here
+        });
 
-            stage.setScene(scene);
-            stage.show();
-        }
-
-
-
-    public String getSearchspaceSelector() {
-        return searchspaceSelector.getValue();
+        stage.setScene(scene);
+        stage.show();
     }
-    public String getProblemSelector() {
-        return problemSelector.getValue();
-    }
-    public String getAlgorithmSelector() {
-        return algorithmSelector.getValue();
-    }
-
-    /*
-    public String getSelectioncriteriaSelector() {
-        return stoppingcriteriaSelector.getValue();
-    }
-*/
 }
